# internal/cluster/server.go
@@ -2,21 +2,24 @@ package cluster
 
 import (
 	"context"
-	proto_demo_store_v1 "github.com/updevru/go-micro-kit-example/gen/store"
+	pb "github.com/updevru/go-micro-kit-example/gen/store"
 	"github.com/updevru/go-micro-kit-example/internal/domain"
 	"go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc"
+	"go.opentelemetry.io/otel/attribute"
+	"go.opentelemetry.io/otel/trace"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/credentials/insecure"
 	"log/slog"
 )
 
 type ServiceClient struct {
-	conn   proto_demo_store_v1.StoreClient
-	queue  chan *domain.ItemStore
+	conn   pb.LogClient
+	queue  chan *pb.LogRequest
 	logger *slog.Logger
+	tracer trace.Tracer
 }
 
-func NewServiceClient(logger *slog.Logger, address string) (*ServiceClient, error) {
+func NewServiceClient(logger *slog.Logger, tracer trace.Tracer, address string) (*ServiceClient, error) {
 	conn, err := grpc.NewClient(
 		address,
 		grpc.WithTransportCredentials(insecure.NewCredentials()),
@@ -26,16 +29,29 @@ func NewServiceClient(logger *slog.Logger, address string) (*ServiceClient, erro
 		return nil, err
 	}
 
-	client := proto_demo_store_v1.NewStoreClient(conn)
+	client := pb.NewLogClient(conn)
 	return &ServiceClient{
 		conn:   client,
-		queue:  make(chan *domain.ItemStore, 1000),
+		queue:  make(chan *pb.LogRequest, 1000),
 		logger: logger.With(slog.String("server", address)),
+		tracer: tracer,
 	}, nil
 }
 
-func (s *ServiceClient) PublishItem(item *domain.ItemStore) {
-	s.queue <- item
+func (s *ServiceClient) SaveLog(item *domain.ItemStore) {
+	s.queue <- &pb.LogRequest{
+		Action:   pb.LogRequest_SAVE,
+		Key:      item.Key,
+		Value:    item.Value,
+		Deadline: item.Deadline,
+	}
+}
+
+func (s *ServiceClient) DeleteLog(item *domain.ItemStore) {
+	s.queue <- &pb.LogRequest{
+		Action: pb.LogRequest_DELETE,
+		Key:    item.Key,
+	}
 }
 
 func (s *ServiceClient) Worker(ctx context.Context) {
@@ -45,15 +61,15 @@ func (s *ServiceClient) Worker(ctx context.Context) {
 			case <-ctx.Done():
 				return
 			case item := <-s.queue:
-				_, err := s.conn.Save(ctxWithMetadata(ctx), &proto_demo_store_v1.SaveRequest{
-					Key:   item.Key,
-					Value: item.Value,
-				})
+				ctxSpan, span := s.tracer.Start(ctx, "worker.SaveItem", trace.WithAttributes(attribute.String("key", item.Key)))
+				_, err := s.conn.Save(ctxWithMetadata(ctxSpan), item)
 				if err != nil {
-					s.logger.ErrorContext(ctx, "failed send item", slog.String("error", err.Error()), slog.String("key", item.Key))
+					span.RecordError(err)
+					s.logger.ErrorContext(ctxSpan, "failed send item", slog.String("error", err.Error()), slog.String("key", item.Key))
 				} else {
-					s.logger.InfoContext(ctx, "success send item", slog.String("key", item.Key))
+					s.logger.InfoContext(ctxSpan, "success send item", slog.String("key", item.Key))
 				}
+				span.End()
 			}
 		}
 	}()
